--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="../">
+    <a class="navbar-brand pt-md-0 pt-sm-3" href="../">
         <img src="/images/dog.png" width="22" height="22" class="d-inline-block align-mid mb-1" alt="">
         Puppy Play Date
     </a>
@@ -8,18 +8,18 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item pr-2">
+      <li class="nav-item pr-2 py-1">
         <a class="nav-link" href="../search">Find a Friend</a>
         {{!-- <a class="nav-link" href="#">Find a Friend<span class="sr-only">(current)</span></a> --}}
       </li>
-      <li class="nav-item pr-2">
+      <li class="nav-item pr-2 py-1">
         <a class="nav-link" href="../scheduler">Manage Dates<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item pr-2">
+      <li class="nav-item pr-2 py-1">
         <a class="nav-link" href="../profile">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="../api/signout"><button type="button" class="btn btn-outline-light px-2 py-1 my-2 my-sm-0">Logout</button></a>
       </li>
     </ul>
   </div>
@@ -36,21 +36,21 @@
     <div class="carousel-inner">
       <div class="carousel-item active" id="carousel1">
         <img src="/images/banner1.jpg" class="d-block w-100" id="carpic" alt="...">
-        <div class="carousel-caption d-none d-sm-block">
+        <div class="carousel-caption d-sm-block">
           <h4>Meet your dog's new best friend</h4>
           <p>Use our world-famous dog matching algorithm to find the perfect pal for your dog!</p>
         </div>
       </div>
       <div class="carousel-item" id="carousel1">
         <img src="/images/banner2.jpg" class="d-block w-100" id="carpic" alt="...">
-        <div class="carousel-caption d-none d-sm-block">
+        <div class="carousel-caption d-sm-block">
           <h4>Manage your social calendar</h4>
           <p>Create, track, and manage your dog's play dates!</p>
         </div>
       </div>
       <div class="carousel-item" id="carousel1">
         <img src="/images/banner4.jpg" class="d-block w-100" id="carpic" alt="...">
-        <div class="carousel-caption d-none d-sm-block">
+        <div class="carousel-caption d-sm-block">
           <h4>Get out and play</h4>
           <p>Socializing your dog means more playtime and exercise.</p>
         </div>
