--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,51 +1,58 @@
-<section class="padd-top-60">
-
     <div class="container">
-
         <div class="row">
-
             <div class="col-md-12 text-center">
-
                 <h3><span class="text-thin">Welcome back to puppy-play-date! We're gonna be best</span> FUR-ends.</h3>
-
             </div>
-
         </div>
-
         <br> <br> <br> <br>
-
         <div class="row words">
-
             <div class="col-xs-6" align="right">                
-
-                <form action="/searchme" method="get">
-
+                {{!-- <form action="/searchme" method="get">
                     <label for="email">Email: </label>
-
                     <input id="email" required="" type="text" name="email" value=""><br>
-
                     <label for="zipcode">Zip Code: </label>
-
                     <input id="zipcode" required="" type="text" name="zipcode" value=""><br>
-
                     <br>
-
                     <input class="blackbox" type="submit" value="Login">
-
+                </form> --}}
+                <form>
+                    {{!-- <label for="email">Email: </label> --}}
+                    <input id="email" required="" type="email" name="email" placeholder="email"><br>
+                    {{!-- <label for="zipcode">Password: </label> --}}
+                    <input id="password" required="" type="password" name="password" placeholder="password"><br>
+                    <br>
+                    <input type="submit" value="Submit"> {{!-- Can have a a BUTTON or INPUT, just make sure to have type="submit" --}}
                 </form>
-
             </div>
-
             <div class="col-xs-6">
-
                 <img src="/images/puppy2.jpg" height="300" width="250">
-
             </div>
-
         </div>
-
     </div>
 
-    <div class="clearfix"></div>
+<script>
+    $('form').on('submit', function(e){
+    e.preventDefault();
+    // const email = $("#email").val().trim;
+    // const password = $("#password").val().trim;
+    const email = $('input[type="email"]').val().trim();
+    const password = $('input[type="password"]').val().trim();
+    const user = {
+        email,
+        password
+    }
 
-</section>
+    $.ajax({
+        url: '/api/login', //20:06
+        method: 'POST',
+        data: user
+    })
+    .then(function(data){
+        window.location.href = '/search';
+    })
+    .catch(function(){
+        window.location.href = '/login';
+    });
+
+});
+</script>
