--- a/views/scheduler.handlebars
+++ b/views/scheduler.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="../">
+    <a class="navbar-brand pt-md-0 pt-sm-3" href="../">
         <img src="/images/dog.png" width="22" height="22" class="d-inline-block align-mid mb-1" alt="">
         Puppy Play Date
     </a>
@@ -8,18 +8,18 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item pr-2">
-        <a class="nav-link" href="../search">Find a Friend</a>
+      <li class="nav-item py-1 pr-2">
+        <a class="nav-link" href="../search">Find a Friend<span class="sr-only">(current)</span></a>
         {{!-- <a class="nav-link" href="#">Find a Friend<span class="sr-only">(current)</span></a> --}}
       </li>
-      <li class="nav-item  pr-2 active">
+      <li class="nav-item py-1 pr-2 active">
         <a class="nav-link" href="../scheduler">Manage Dates<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item pr-2">
+      <li class="nav-item py-1 pr-2">
         <a class="nav-link" href="../profile">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="../api/signout"><button type="button" class="btn btn-outline-light px-2 py-1 my-2 my-sm-0">Logout</button></a>
       </li>
     </ul>
   </div>
