--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="../">
+    <a class="navbar-brand pt-md-0 pt-sm-3" href="../">
         <img src="/images/dog.png" width="22" height="22" class="d-inline-block align-mid mb-1" alt="">
         Puppy Play Date
     </a>
@@ -8,18 +8,18 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item  pr-2 active">
+      <li class="nav-item py-1 pr-2 active">
         <a class="nav-link" href="../search">Find a Friend<span class="sr-only">(current)</span></a>
         {{!-- <a class="nav-link" href="#">Find a Friend<span class="sr-only">(current)</span></a> --}}
       </li>
-      <li class="nav-item pr-2">
+      <li class="nav-item py-1 pr-2">
         <a class="nav-link" href="../scheduler">Manage Dates</a>
       </li>
-      <li class="nav-item pr-2">
+      <li class="nav-item py-1 pr-2">
         <a class="nav-link" href="../profile">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="../api/signout"><button type="button" class="btn btn-outline-light px-2 py-1 my-2 my-sm-0">Logout</button></a>
       </li>
     </ul>
   </div>
@@ -43,47 +43,22 @@
 
         <div class="row words">
 
-            <div class="col-xs-6" align="right">                
-
-                <form action="/result" method="get">
-
-                    <label for="zipcode">Zip Code*: </label>
-
-                    <input id="zipcode" type="text" name="zipcode" value=""><br>
-
-                    <label for="dog_personality">Dog Personality: </label>
-
-                    <input id="dog_personality" type="text" name="dog_personality" value=""><br>
-
-                    <label for="dog_gender">Dog Gender: </label>
-
-                    <input id="dog_gender" type="text" name="dog_gender" value=""><br>
-
-                    <label for="dog_age">Dog Age: </label>
-
-                    <input id="dog_age" type="text" name="dog_age" value=""><br>
-
-                    <label for="dog_breed">Dog Breed: </label>
-
-                    <input id="dog_breed" type="text" name="dog_breed" value=""><br>
-
-                    <label for="dog_weight">Dog Weight: </label>
-
-                    <input id="dog_weight" type="text" name="dog_weight" value=""><br>
-
-                    <br>
-
-                    <input class="blackbox" type="submit" value="Retrieve">
-
-                </form>
-
-            </div>
-
-            <div class="col-xs-6">
-
-                <img src="/images/puppy3.jpg" height="300" width="250">
-
-            </div>
+      <h4>Users</h4>
+      <ul class="list-group">
+        {{#each user}}
+        {{!-- {{#unless devoured}} 
+          {{> burgers/burger-block devoured=true}}
+        {{/unless}} --}}
+<li>
+  {{email}}
+{{!-- <button class="change-devoured" data-id="{{id}}" data-newEaten="{{devoured}}">EAT!</button>
+{{else}}
+<li class="list-group-item disabled" aria-disabled="true">
+{{burger_name}}	
+{{/if}} --}}
+</li>
+        {{/each}}
+      </ul>
 
         </div>
 
