--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -105,7 +105,7 @@
     const email = $('input[type="email"]').val().trim();
     const password = $('input[type="password"]').val().trim();
     //const firstName = $("#firstName").val().trim();
-    const user = {
+    const user1 = {
         email,
         password
     }
@@ -113,7 +113,7 @@
     $.ajax({
         url: '/api/signup', 
         method: 'POST',
-        data: user
+        data: user1
     })
     .then(function(data){
         window.location.href = '/search';
