--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -43,7 +43,7 @@
 
         <div class="row words">
 
-      <h4>Users</h4>
+      <h4>Select your new playpal</h4>
       <ul class="list-group">
         {{#each user}}
         {{!-- {{#unless devoured}} 
